# wenyang-compiler

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  compose.yaml  docker-test.sh  test.sh
hw1/: test.ps1
hw1/src/: compiler_util.h
hw1/src/lib/: chinese_number.c  utf8_console.h
hw1/test/對勘/: 02_流轉_易值.out  04_九章_算術.out  06_尋隱_決策.out  07_酒宴_循環.out  12_萬化_方術.out
hw1/test/策問/: 01_開物_定名.wy  02_流轉_易值.wy  03_留墨_書法.wy  04_九章_算術.wy  06_尋隱_決策.wy  07_酒宴_循環.wy  12_萬化_方術.wy
hw2/: CMakeLists.txt  README.md
hw2/cmake/: WenyanConfig.cmake.in  wenyan-toolchain.cmake
hw2/lib/WJCL/: CMakeLists.txt
hw2/src/: CMakeLists.txt  compiler.l  compiler.y  compiler_util.h  expression.c  expression.h  main.c  object.c  object.h  object_type.h  scope.c  value_data.c  wyc.c
hw2/src/control/: for.c  function.c  function.h  function_builtin.h  function_info.h  if.c  if.h  while.c  (+1 more)
hw2/test/: CMakeLists.txt  test.ps1  test.sh
hw2_copy/: .gitignore  LLVM_IR_CHEATSHEET.md  YACC_CHEATSHEET.md
hw2_copy/docs/: development-notes.md
hw2_copy/src/: compiler.h  compiler.l  compiler.y  compiler_util.c  expression.c  main.c  main.h  object.c  scope.c  scope.h  value_data.c  value_data.h
hw2_copy/test/: REPORT.md  input.wy  validate.sh
src/: compiler.l  compiler_util.h  main.c
src/lib/: chinese_number.c  chinese_number.h
test/對勘/: 01_開物_定名.out  03_留墨_書法.out  05_山村_算術.out  08_口訣_乘算.out  09_百雞_算術.out  10_客上_倒敘.out  11_布陣_行列.out  割圓術.out  曼德博集.out
test/殿試/: 割圓術.wy  曼德博集.wy
test/策問/: 05_山村_算術.wy  08_口訣_乘算.wy  09_百雞_算術.wy  10_客上_倒敘.wy  11_布陣_行列.wy
(+67 files in other folders)
